[package]
name = "agentusage"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
strip-ansi-escapes = "0.2"
anyhow = "1"
ctrlc = "3"
libc = "0.2"
comfy-table = "7"
